# video_adiut

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api-test-report-2026-07-08.md  capacity-plan-10000.md  content-risk-compat-api.md  video-review-api.md  video-review-test-report-2026-07-09.md
migrations/: 001_video_review_infra.sql  002_fine_grained_review.sql  003_admin_timing.sql  004_oss_uploads.sql
policies/: default.json
scripts/: cancel_load_prefix.py  init_infra.sh  load_test_content_risk.py  load_test_model_api.py  provision_aliyun_sts_roles.py  restart_all.sh  run_api.sh  run_api_nohup.sh  run_semantic_service.sh  run_worker.sh  run_worker_nohup.sh  semantic_video_extraction.py  smart_api_test.py  stop_api.sh  stop_worker.sh
static/: app.js  index.html  styles.css
tests/: api_manifest.toml  test_admin_stats_filters.py  test_analyzer_normalization.py  test_api_key_pool.py  test_bulk_reviews.py  test_capacity_load_test.py  test_chunk_upload.py  test_content_risk_compat.py  test_dispatch_pipeline_mode.py  test_downloader.py  test_frame_processing.py  test_frontend_upload_accept.py  test_infra_schema.py  test_load_test_model_api_retry.py  test_model_qpm_limiter.py  test_model_retry.py  test_oss_upload.py  test_platform_api.py  test_policy_judge.py  test_policy_risk_levels.py  test_provider_adapters.py  test_provider_contract.py  test_provider_routing.py  test_redis_cache.py  test_segment_plan.py  test_semantic_extraction.py  test_semantic_service.py  test_smart_api_test.py  test_stage_queue.py  test_staged_tasks.py  test_storage_cleanup.py  (+6 more)
(+112 files in other folders)
